--- a/pyone/docker-compose.yaml
+++ b/pyone/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
     - ./pyone/PyOne:/root/PyOne
     depends_on:
       - mongodb
+      - redis
 
   mongodb:
     image: mvertes/alpine-mongo
